fixed issue that if linebreak is there in post description then it was not giving line breaks while displaying the contnetn added  - white-space: pre-wrap;

--- a/src/index.css
+++ b/src/index.css
@@ -497,6 +497,7 @@
 
 .postData > p {
   margin: 6px 0px 10px 0px;
+  white-space: pre-wrap;
 }
 
 .commentReply {
